# rl-tic-tac-toe

./: README.md  main.py  pyproject.toml  setup.py  tictactoe_env.py
.github/workflows/: pythonpackage.yml
dqn_tictactoe/: first_empty_field_policy.py  main.py  tictactoe_env.py  tictactoe_multi_env.py
tests/: test_tictactoe_env.py  test_tictactoe_multi_env.py
