[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
ray = {version="0.8.6", extras=['rllib']}
tensorflow = "2.1"
tensorflow-estimator = "2.1"
wandb = "^0.9.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
opencv-python= "4.3.0.36"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
